--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://eleon024.github.io/ema_react_app",
+  "homepage": "http://RichardFreedman.github.io/ema_react_app",
   "name": "react",
   "version": "1.0.0",
   "description": "React example starter project",
