--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "exitzero": "^1.0.1",
     "loader-utils": "3.2.1",
     "node-fetch": "^3.3.2",
-    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "^5.0.1",
@@ -24,14 +23,16 @@
     "customize-cra": "^1.0.0",
     "gh-pages": "^5.0.0",
     "null-loader": "^4.0.1",
+    "path-browserify": "^1.0.1",
+    "react-app-rewired": "^2.2.1",
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "browserslist": [
