--- a/package.json
+++ b/package.json
@@ -13,26 +13,25 @@
     "exitzero": "^1.0.1",
     "loader-utils": "3.2.1",
     "node-fetch": "^3.3.2",
+    "path-browserify": "^1.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-scripts": "^5.0.1",
-    "verovio": "^4.0.0"
+    "verovio": "^3.16.0"
   },
   "devDependencies": {
     "@babel/runtime": "7.13.8",
     "customize-cra": "^1.0.0",
     "gh-pages": "^5.0.0",
     "null-loader": "^4.0.1",
-    "path-browserify": "^1.0.1",
-    "react-app-rewired": "^2.2.1",
     "typescript": "4.1.3"
   },
   "scripts": {
-    "start": "react-app-rewired start",
+    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "browserslist": [
